Added code to get_data.py and load_data.py and generated raw data file.

--- a/dvc.yaml
+++ b/dvc.yaml
@@ -3,7 +3,7 @@ stages :
     cmd : python src/load_data.py --config=params.yaml
     deps :
       - src/get_data.py
-      - src/lead_data.py
+      - src/load_data.py
       - data_given/winequality.csv
     outs:
       - data/raw/winequality.csv
