--- a/tox.ini
+++ b/tox.ini
@@ -5,4 +5,10 @@ envlist = py39
 [testenv]
 deps = -rrequirements.txt
 commands =
+    #Stop the build if there are python syntax errors or undefined names
+    flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+
+    #Exit zero treats all errors as warnings. The GitHub editor is 127 characters wide
+    flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+
     pytest -v
