--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -16,7 +16,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - nam: Setup Python 3.8
+      - name: Setup Python 3.8
         uses: actions/setup-python@v3
         with:
           python-version: 3.8
