--- a/dvc.yaml
+++ b/dvc.yaml
@@ -40,7 +40,7 @@ stages :
   #     - src/predict_demo.py
   #     - predict_demo_request.json
 
-  # log_production_model:
-  #   cmd: python src/log_production_model.py --config=params.yaml
-  #   deps:
-  #     - src/log_production_model.py
+  log_production_model:
+    cmd: python src/log_production_model.py --config=params.yaml
+    deps:
+      - src/log_production_model.py
